--- a/style.css
+++ b/style.css
@@ -58,3 +58,10 @@ good.name {
     margin-right: 40px;
     font-size: 20px;
 }
+
+#battleScreen {
+    display: none;
+    width: 100%;
+    height: 400px;
+    border: 2px solid green;
+}
