--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ li {
 }
 #display {
     border: 3px solid #007bff;
+    background-color: #0022ff;
     border-radius: 20px;
     margin-left: 175px;
     padding-bottom: 40px;
@@ -31,6 +32,7 @@ li {
 }
 #displayBad {
     border: 3px solid #dc3545;
+    background-color: #fe1045;
     border-radius: 20px;
     margin-left: 200px;
     padding-bottom: 40px;
@@ -64,4 +66,10 @@ good.name {
     width: 100%;
     height: 400px;
     border: 2px solid green;
+}
+
+#winner {
+    position: absolute;
+    right: 50%;
+    top: 20%; /* Valeur approximative, à optimiser correctement */
 }
