--- a/style.css
+++ b/style.css
@@ -66,10 +66,11 @@ good.name {
     width: 100%;
     height: 400px;
     border: 2px solid green;
+    color: white;
 }
 
 #winner {
     position: absolute;
-    right: 50%;
+    right: 5%;
     top: 20%; /* Valeur approximative, à optimiser correctement */
 }
