--- a/style.css
+++ b/style.css
@@ -61,7 +61,11 @@ good.name {
 
 #battleScreen {
     display: none;
-    width: 100%;
+    width: 60%;
     height: 400px;
-    border: 2px solid green;
+    border: 8px solid rgb(99, 78, 61);
+    margin: auto;
+    border-radius: 70px;
+    margin-top: 60px;
+    background-color: red;
 }
